# lgr-live-bootcamp-project

./: .env.example  .gitignore  .rustfmt.toml  compose.yml  cspell.json  flake.nix
.github/workflows/: prod.yml
app-service/src/: main.rs
auth-service/: .env.example  Cargo.toml
auth-service/.sqlx/: query-1c28bcb2d45ec83c2a7fda330c8d6218c5a1d7ebb4cae91b351770e4b2119522.json  query-4d46b0c3f3cfce226dc9e1610873aeaf5d2922732d9e8dc23bae01edfedaf55f.json
auth-service/migrations/: 20250916142049_create_users_table.up.sql
auth-service/scripts/: init_db.sh  release-port.sh
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: banned_token_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs  resend.rs
auth-service/src/services/data_stores/: hashmap_2fa_store.rs  hashmap_user_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_factor_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
