[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["--cfg=sqlx_macros_unstable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4.41"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
rand = "0.9.2"
redis = { version = "0.32.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
validator = "0.20.0"

[dev-dependencies]
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = { version = "0.11.26", default-features = false, features = ["cookies", "json"] }
